# adaptive-lighting

./: .all-contributorsrc  .devcontainer.json  .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  DOCS_PLAN.md  Dockerfile  PR_1380_ANALYSIS.md  README.md  custom_updater.json  hacs.json  info.md  pyproject.toml  requirements.txt  sample.yaml  setup.cfg  temp.txt  test_dependencies.py  zensical.toml
.github/: CODEOWNERS  FUNDING.yml  config.yml  release-drafter.yml  renovate.json  update-readme.py  update-services.py  update-strings.py
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  doc.md  enhancement.md  feature.md
.github/workflows/: automerge.yaml  automerge.yml  ci.yaml  deploy-webapp.yml  docker-build.yml  docs.yml  hassfest.yaml  install_dependencies.yaml  main-to-master-sync.yml  markdown-code-runner.yml  pre-commit.yaml  pytest.yaml  release-drafter.yml  toc.yaml  update-readme.yml  update-test-matrix.yaml  validate.yml
.github/workflows/install_dependencies/: action.yml
config/: configuration.yaml
custom_components/adaptive_lighting/: __init__.py  _docs_helpers.py  adaptation_utils.py  change_switch_settings_full_service_data.txt  color_and_brightness.py  config_flow.py  const.py  docs_gen.py  hass_utils.py  helpers.py  homeassistant_util_color.py  hue_utils.py  in_dev_switch.py  manifest.json  sensor.py  services.yaml  strings.json  sun.py  switch.py
custom_components/adaptive_lighting/translations/: LICENSE.md  af.json  bg.json  bn.json  ca.json  cs.json  da.json  de.json  el.json  en.json  es.json  et.json  fi.json  fr.json  gl.json  hr.json  hu.json  id.json  it.json  ja.json  ko.json  nb.json  nl.json  pl.json  pt-BR.json  pt.json  ro.json  ru.json  sk.json  sl.json  sv.json  ta.json  tr.json  uk.json  ur.json  zh-Hans.json  zh-Hant.json  zh_Hant.json
custom_components/adaptive_lighting_indepandent/: color_and_brightness.py  strings.json
custom_components/adaptive_lighting_indepandent/translations/: nb.json  pl.json  sl.json  sv.json
custom_components/adaptive_lighting_independent/: const.py  manifest.json  services.yaml  strings.json  switch.py
custom_components/adaptive_lighting_independent/translations/: ca.json  en.json  gl.json  hu.json  ko.json  sl.json  uk.json
custom_components/circadian_lighting/: __init__.py  const.py  manifest.json  sensor.py  services.yaml  strings.json  switch.py
custom_components/circadian_lighting/translations/: en.json
docs/: CNAME  automation-examples.md  configuration.md  getting-started.md  index.md  run_markdown_code_runner.py  see-also.md  services.md  troubleshooting.md
docs/advanced/: brightness-modes.md  color-temp-curve.md  manual-control.md  sleep-mode.md
docs/assets/stylesheets/: extra.css
docs/mockups/: before-after-mockup.html  mockup-room-presets.html  mockup-validation.html  mockup-wizard-flow.html
docs/overrides/partials/integrations/analytics/: custom.html
scripts/: develop  docker-entrypoint.sh  install_ha  link  lint  setup  setup-dependencies  setup-devcontainer  setup-symlinks  sync-strings  update-generated-content  update-strings.py  update-test-matrix.py
tests/: README.md  common.py  conftest.py  test_adaptation_utils.py  test_color_and_brightness.py  test_config_flow.py  test_hass_utils.py  test_helpers.py  test_independent_color.py  test_init.py  test_lux_brightness.py  test_manual_schedule.py  test_sensor.py  test_strings_sync.py  test_switch.py  verify_independent_color.py
webapp/: README.md  __init__.py  app.py  color_and_brightness.py  homeassistant_util_color.py  requirements-dev.txt  requirements-locked.txt  requirements.txt  requirements.txt.in
