[project]
name = "adaptive-lighting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "markdown-code-runner>=2.4.0",
    "markdown-gfm-admonition>=0.3.0",
    "pandas>=2.3.3",
    "tabulate>=0.9.0",
    "voluptuous>=0.16.0",
    "zensical>=0.0.15",
]
