[project]
name = "adaptive-lighting"
version = "1.30.1"
description = "Automatically adjust brightness and color of lights based on the sun position"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Bas Nijholt", email = "bas@nijho.lt" },
]
maintainers = [
    { name = "Bas Nijholt", email = "bas@nijho.lt" },
    { name = "RubenKelevra" },
    { name = "th3w1zard1" },
    { name = "protyposis" },
]
keywords = [
    "home-assistant",
    "hass",
    "adaptive-lighting",
    "circadian",
    "lighting",
    "smart-home",
    "automation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = [
    "homeassistant>=2024.12.0",
    "ulid-transform>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/basnijholt/adaptive-lighting"
Documentation = "https://adaptive-lighting.nijho.lt"
Repository = "https://github.com/basnijholt/adaptive-lighting"
Issues = "https://github.com/basnijholt/adaptive-lighting/issues"
Changelog = "https://github.com/basnijholt/adaptive-lighting/releases"

[dependency-groups]
docs = [
    "astral>=2.2",
    "markdown-code-runner>=2.4.0",
    "markdown-gfm-admonition>=0.3.0",
    "pandas>=2.0.0",
    "shinylive>=0.2.0",
    "tabulate>=0.9.0",
    "voluptuous>=0.13.0",
    "zensical>=0.0.15",
]
dev = [
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["custom_components"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific rules
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["adaptive_lighting"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
